tests/compile_fail/from_str/struct_non_flat_with_attribute.stderr
error: expected `error` argument here
 --> tests/compile_fail/from_str/struct_non_flat_with_attribute.rs:2:12
  |
2 | #[from_str(rename_all = "lowercase")]
  |            ^^^^^^^^^^
